Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextTextObj.quorum
class Main
    action Main
        Text v
        v:SetValue("text")
        Test(v)
    end

    action Test(text var)
    end
end
